# rtems

c/src/lib/libbsp/arm/stm32f4/: configure.ac
c/src/lib/libbsp/arm/stm32f4/make/custom/: stm32f4-testsuite.tcfg
testsuites/samples/: Makefile.am  configure.ac
testsuites/samples/blink/: Makefile.am  init.c
testsuites/samples/hello/: init.c
